--- a/.github/workflows/.github-actions-testing.yml
+++ b/.github/workflows/.github-actions-testing.yml
@@ -28,8 +28,9 @@ jobs:
 
       - name: Lint with pycodestyle
         run: |
-          pycodestyle src test
+          pycodestyle 1_lab/rating/src 1_lab/rating/test
 
       - name: Test with pytest
         run: |
-          PYTHONPATH=./:./src/ pytest test
+          python -m pytest 1_lab\rating\test
+
