изменил путь до requirements

--- a/1_lab/rating/.github/workflows/.github-actions-testing.yml
+++ b/1_lab/rating/.github/workflows/.github-actions-testing.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f 1_lab\rating\requirements.txt ]; then pip install -r 1_lab\rating\requirements.txt; fi
 
       - name: Lint with pycodestyle
         run: |
-          pycodestyle 1_lab/rating/src 1_lab/rating/test
+          pycodestyle.exe 1_lab/rating/src 1_lab/rating/test
 
       - name: Test with pytest
         run: |
