--- a/1_lab/rating/.github/workflows/.github-actions-testing.yml
+++ b/1_lab/rating/.github/workflows/.github-actions-testing.yml
@@ -24,12 +24,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pycodestyle
-          pip install pytest
+          python -m pip install pycodestyle
+          python -m pip install pytest
 
       - name: Lint with pycodestyle
         run: |
-          pycodestyle.exe 1_lab/rating/src 1_lab/rating/test
+          pycodestyle 1_lab/rating/src 1_lab/rating/test
 
       - name: Test with pytest
         run: |
