--- a/1_lab/rating/.github/workflows/.github-actions-testing.yml
+++ b/1_lab/rating/.github/workflows/.github-actions-testing.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Lint with pycodestyle
         run: |
-          pycodestyle 1_lab/rating/src 1_lab/rating/test
+          python -m pycodestyle 1_lab/rating/src 1_lab/rating/test
 
       - name: Test with pytest
         run: |
