--- a/1_lab/rating/.github/workflows/.github-actions-testing.yml
+++ b/1_lab/rating/.github/workflows/.github-actions-testing.yml
@@ -25,11 +25,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install pycodestyle
+          python -m pycodestyle --version
           python -m pip install pytest
 
       - name: Lint with pycodestyle
         run: |
-          python -m pycodestyle.exe 1_lab/rating/src 1_lab/rating/test
+          python -m pycodestyle 1_lab/rating/src 1_lab/rating/test
 
       - name: Test with pytest
         run: |
