--- a/.github/workflows/.github-actions-testing.yml
+++ b/.github/workflows/.github-actions-testing.yml
@@ -24,7 +24,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          python -m pip install pycodestyle
+          python -m pycodestyle --version
+          python -m pip install pytest
 
       - name: Lint with pycodestyle
         run: |
