--- a/.github/workflows/.github-actions-testing.yml
+++ b/.github/workflows/.github-actions-testing.yml
@@ -33,5 +33,7 @@ jobs:
 
       - name: Test with pytest
         run: |
+          1_lab/rating/.venv/Scripts/Activate.ps1
+          python -m src.main -p 1_lab/rating/data/data.txt
           python -m pytest 1_lab/rating/test
 
