--- a/.github/workflows/.github-actions-testing.yml
+++ b/.github/workflows/.github-actions-testing.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Test with pytest
         run: |
           python -m src.main -p 1_lab/rating/data/data.txt
-          python -m pytest 1_lab/rating/test
+          pytest test
 
