--- a/.github/workflows/.github-actions-testing.yml
+++ b/.github/workflows/.github-actions-testing.yml
@@ -33,6 +33,6 @@ jobs:
 
       - name: Test with pytest
         run: |
-          python -m src.main -p 1_lab/rating/data/data.txt
+          python 1_lab.rating.src.main -p 1_lab/rating/data/data.txt
           pytest  1_lab/rating/test
 
