--- a/.github/workflows/.github-actions-testing.yml
+++ b/.github/workflows/.github-actions-testing.yml
@@ -30,12 +30,9 @@ jobs:
       - name: Lint with pycodestyle
         run: |
           python -m pycodestyle 1_lab/rating/src 1_lab/rating/test
-      
-      - name: Set PYTHONPATH
-        run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)/1_lab/rating/src" >> $GITHUB_ENV
 
       - name: Test with pytest
         run: |
           python -m 1_lab.rating.src.main -p 1_lab/rating/data/data.txt
-          pytest 1_lab/rating/test
+          python -m pytest 1_lab/rating/test
 
