--- a/.github/workflows/.github-actions-testing.yml
+++ b/.github/workflows/.github-actions-testing.yml
@@ -32,6 +32,5 @@ jobs:
 
       - name: Test with pytest
         run: |
-          python -m 1_lab.rating.src.main -p 1_lab/rating/data/data.txt
-          python -m pytest 1_lab/rating/test
+          PYTHONPATH=./:./src/ python -m pytest 1_lab/rating/src 1_lab/rating/test
 
