--- a/.github/workflows/.github-actions-testing.yml
+++ b/.github/workflows/.github-actions-testing.yml
@@ -32,5 +32,5 @@ jobs:
 
       - name: Test with pytest
         run: |
-          PYTHONPATH=./:./src/ python -m pytest 1_lab/rating/src 1_lab/rating/test
+          PYTHONPATH=./:./src/ pytest test
 
